@@ -43,5 +43,5 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Action-REST.git
-version: 1.08
+version: 1.09
 x_authority: cpan:BOBTFISH
