@@ -2,7 +2,6 @@ use strict;
 use warnings;
 
 use Test::More 0.88;
-use Data::Serializer;
 use FindBin;
 
 use lib ("$FindBin::Bin/lib", "$FindBin::Bin/../lib", "$FindBin::Bin/broken");
